# pysioviz

./: .gitignore  CHANGELOG.md  LICENSE  LOGO_LICENSE.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  config.yml
assets/: keyboard_events.js
components/: IMUComponent.py  SkeletonComponent.py
src/pysioviz/: main.py  sync_utils.py
src/pysioviz/components/: AnnotationComponent.py  BaseComponent.py  FrameSliderComponent.py  GazeComponent.py  IMUComponent.py  LinePlotComponent.py  OffsetComponent.py  SaveLoadComponent.py  SkeletonComponent.py  VideoComponent.py  __init__.py
src/pysioviz/components/control/: AnnotationComponent.py  ControlComponent.py  FrameSliderComponent.py  OffsetComponent.py  SaveLoadComponent.py  __init__.py
src/pysioviz/components/data/: DataComponent.py  ExoImuComponent.py  ImuComponent.py  LinePlotComponent.py  MotorComponent.py  ReferenceVideoComponent.py  SkeletonComponent.py  VideoComponent.py  __init__.py
src/pysioviz/components/obsolete/: InsolePressureComponent.py
src/pysioviz/utils/: cache.py  gui_utils.py  sync_utils.py  time_utils.py  types.py
utils/: cache.py  gui_utils.py  time_utils.py
